fix: de-duplicate and sort both `includedBy` and `projectReferences` in reports (#8440)
Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>